--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-     <ImageView
+    <ImageView
         android:id="@+id/img_fb"
         android:layout_width="67dp"
         android:layout_height="63dp"
         android:layout_marginTop="156dp"
+        android:contentDescription="img_facebook"
         android:onClick="abrirFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
