Mensaje de confirmacion

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/background_screens"
     android:backgroundTint="@null"
     android:hapticFeedbackEnabled="false"
     tools:context=".MainActivity">
@@ -80,7 +80,7 @@
         android:layout_width="67dp"
         android:layout_height="63dp"
         android:layout_marginTop="156dp"
-        android:contentDescription="img_facebook"
+        android:contentDescription="@string/img_facebook"
         android:onClick="abrirFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +96,7 @@
         android:layout_height="63dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="156dp"
+        android:contentDescription="@string/logo_google"
         android:onClick="abrirGo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +110,7 @@
         android:layout_height="63dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="156dp"
+        android:contentDescription="@string/img_twitter"
         android:onClick="abrirTW"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_twitter"
