--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -11,29 +11,26 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:fontFamily="@font/logo_name"
+        android:layout_marginTop="36dp"
         android:hint="@string/txt_Ingresa_Tus_Datos"
-        android:textColor="#FDFCFC"
-        android:textColorHint="#F8F5F5"
-        android:textSize="24sp"
+        android:textColor="#000000"
+        android:textColorHint="#131313"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
+        style="@style/diseño_botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/design_buttons"
-        android:backgroundTint="@null"
-        android:fontFamily="@font/logo_name"
         android:onClick="irInicio"
         android:text="@string/btn_ConfirmarCrearCuenta"
         android:textSize="24sp"
         app:backgroundTint="@null"
-        app:icon="@android:drawable/checkbox_on_background"
         app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +50,8 @@
         android:hint="@string/plain_txt_confirmarContrasela"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        android:textColorHint="#E1BEE7"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
@@ -70,7 +68,8 @@
         android:hint="@string/creaNombre"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#FFCDD2"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_cc_icono_usuario" />
@@ -87,7 +86,8 @@
         android:hint="@string/plain_correo_CrearCuenta"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#E1BEE7"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />
@@ -99,12 +99,13 @@
         android:layout_marginTop="8dp"
         android:autofillHints=""
         android:drawableEnd="@drawable/ic_logo_password"
-        android:drawableTint="#050505"
+        android:drawableTint="#000000"
         android:ems="10"
         android:hint="@string/plain_txt_crearContraseña"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        android:textColorHint="#E1BEE7"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_correo" />
@@ -121,7 +122,8 @@
         android:hint="@string/crearApellido"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#FFCDD2"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_Nombre" />
