--- a/app/src/main/res/drawable/background_screens.xml
+++ b/app/src/main/res/drawable/background_screens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#B300FF"
-        android:endColor="#2B002B"
+        android:startColor="#FFF7D4"
+        android:endColor="#FFD95A"
         android:angle="100"
         />
-
+    <corners
+        android:radius="20dp"
+        />
 </shape>
