--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -11,26 +11,27 @@
         android:id="@+id/txt_IniciaSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:fontFamily="@font/logo_name"
         android:text="@string/txt_log_in"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.068" />
 
     <Button
         android:id="@+id/btn_entrar"
+        style="@style/diseño_botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:background="@drawable/design_buttons"
-        app:backgroundTint="@null"
         android:fontFamily="@font/logo_name"
         android:onClick="metodoLog"
         android:text="@string/btn_entrar"
         android:textColor="#090909"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
@@ -41,10 +42,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/txt_contraseña_olvidada"
-        android:textColor="#E1BEE7"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_entrar"
+        app:layout_constraintVertical_bias="0.098" />
 
     <EditText
         android:id="@+id/plain_txt_InCorreo"
@@ -59,7 +63,8 @@
         android:hint="@string/plain_txt_correo"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#F3E5F5"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -83,14 +88,13 @@
         android:layout_marginTop="12dp"
         android:onClick="irCrearCuenta"
         android:text="@string/txt_crearCuenta"
-        android:textColor="#E1BEE7"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.623"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.0"
 
+        app:layout_constraintVertical_bias="0.007"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
@@ -107,7 +111,8 @@
         android:hint="@string/plain_txt_contraseña"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#F3E5F5"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_txt_InCorreo" />
