--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="376dp"
-        android:fontFamily="@font/logo_name"
         android:text="@string/eslogan"
-        android:textColor="#FBF7F7"
+        android:textColor="#000000"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +24,7 @@
 
     <Button
         android:id="@+id/btncrearCuenta"
-        style="@style/dis_btn"
+        style="@style/diseño_botones"
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:layout_marginBottom="236dp"
@@ -39,7 +38,7 @@
 
     <Button
         android:id="@+id/btnIniciarSesion"
-        style="@style/dis_btn"
+        style="@style/diseño_botones"
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:layout_marginBottom="308dp"
@@ -56,9 +55,12 @@
         android:layout_height="158dp"
         android:layout_marginTop="28dp"
         android:contentDescription="@string/img_inicio"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_logo"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -84,17 +86,17 @@
         android:onClick="abrirFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintHorizontal_bias="0.385"
         app:layout_constraintStart_toEndOf="@+id/img_google"
         app:layout_constraintTop_toBottomOf="@+id/btncrearCuenta"
-        app:layout_constraintVertical_bias="0.028"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/fb" />
 
     <ImageView
         android:id="@+id/img_twitter"
         android:layout_width="67dp"
         android:layout_height="63dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="156dp"
         android:contentDescription="@string/logo_google"
         android:onClick="abrirGo"
@@ -115,7 +117,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_twitter"
         app:layout_constraintTop_toBottomOf="@+id/btncrearCuenta"
-        app:layout_constraintVertical_bias="0.028"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/twitter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
