--- a/app/src/main/res/layout/activity_publicar_anuncio.xml
+++ b/app/src/main/res/layout/activity_publicar_anuncio.xml
@@ -60,6 +60,7 @@
         android:ems="10"
         android:hint="Tacos 2x1"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColorHint="#F8F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +91,7 @@
         android:ems="10"
         android:hint="Efectivo, tarjeta"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="#F8F4F4"
         android:textColorHint="#F8F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,6 +123,7 @@
         android:ems="10"
         android:hint="1:00"
         android:inputType="time"
+        android:minHeight="48dp"
         android:textColorHint="#F8F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -152,6 +155,7 @@
         android:ems="10"
         android:hint="Escribe un mensaje"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColorHint="#F8F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
