--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,28 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="dis_btn" parent="@android:style/TextAppearance.Medium">
-        <item name="android:backgroundTint">#00BCD4</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#090909</item>
+    <style name="diseño_botones" parent="@android:style/TextAppearance.Medium">
+        <item name="android:backgroundTint">#C07F00</item>
         <item name="cornerRadius">40dp</item>
-        
-        
-        
+        <item name="iconTint">#000000</item>
+
+
+
     </style>
-
-<style name="estilo_txt" parent="@android:style/TextAppearance.Medium">
-
-
-
-
-
-</style>
-
-
-
-
-
-
-
 
 </resources>
