--- a/app/src/main/res/layout/activity_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_interfaz_negocio.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_screens"
     tools:context=".interfazNegocio">
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="@string/tv_barberia_los_amigos"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -23,17 +24,18 @@
 
     <Button
         android:id="@+id/btn_catalogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/diseño_botones"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
         android:onClick="irCatalogo"
         android:text="@string/btn_catalogo"
         android:textColor="#000000"
+        android:textSize="13dp"
         app:backgroundTint="@null"
         app:icon="@drawable/catalogo"
         app:iconSize="30dp"
-        app:iconTint="#FFFFFF"
+        app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
@@ -43,38 +45,39 @@
 
     <Button
         android:id="@+id/btn_generar_QR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/diseño_botones"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
         android:onClick="irGenerarQR"
         android:text="@string/btn_generar_QR"
         android:textColor="#000000"
+        android:textSize="13dp"
         app:backgroundTint="@null"
         app:icon="@drawable/qr"
         app:iconSize="30dp"
-        app:iconTint="#FFFFFF"
+        app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.838"
+        app:layout_constraintHorizontal_bias="0.818"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.142" />
 
     <Button
         android:id="@+id/btn_publicar_anuncio"
-        android:layout_width="139dp"
-        android:layout_height="48dp"
+        style="@style/diseño_botones"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
         android:text="@string/btn_publicar_anuncio"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="13dp"
         app:backgroundTint="@null"
         app:icon="@drawable/publi"
         app:iconSize="30dp"
-        app:iconTint="#FFFFFF"
+        app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.132"
@@ -84,18 +87,18 @@
 
     <Button
         android:id="@+id/btn_Abrir_Cerrar_Local"
-        android:layout_width="163dp"
-        android:layout_height="48dp"
+        style="@style/diseño_botones"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
         android:onClick="abrirLocal"
         android:text="@string/Abrir_cerrar_local"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="13dp"
         app:backgroundTint="@null"
         app:icon="@drawable/opn"
         app:iconSize="30dp"
-        app:iconTint="#FFFFFF"
+        app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
@@ -107,36 +110,15 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Tus negocios"
         android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.338" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="324dp"
-        android:layout_height="165dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/carne" />
-
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="250dp"
-        android:layout_height="216dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.916"
-        app:srcCompat="@drawable/zapa" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
