--- a/app/src/main/res/layout/activity_lugares_favoritos.xml
+++ b/app/src/main/res/layout/activity_lugares_favoritos.xml
@@ -3,135 +3,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/fondousuario"
-    tools:context=".lugares_favoritos">
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
-        android:text="@string/tv_lugares_favoritos"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
-
-    <TextView
-        android:id="@+id/txt_barberia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:fontFamily="@font/logo_name"
-        android:text="@string/tv_barberia"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.004" />
+    android:layout_height="wrap_content"
+    android:background="@drawable/des_btn"
+    tools:context=".catalogo">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="290dp"
-        android:layout_height="223dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/imgLocal"
+        android:layout_width="131dp"
+        android:layout_height="141dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintEnd_toStartOf="@+id/nombreLocal"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_barberia"
-        app:layout_constraintVertical_bias="0.021"
-        app:srcCompat="@drawable/barberia" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_agendar_cita"
-        android:layout_width="154dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
+    <TextView
+        android:id="@+id/txtDireccion"
+        android:layout_width="196dp"
+        android:layout_height="91dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
-        android:onClick="irAgendarCita"
-        android:text="@string/btn_agenndar_cita"
-        android:textColor="#050505"
-        android:textSize="10sp"
-        app:backgroundTint="@null"
-        app:icon="@drawable/cita"
-        app:iconSize="30dp"
-        app:iconTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_llamar"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.019" />
-
-    <Button
-        android:id="@+id/btn_llamar"
-        android:layout_width="154dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
-        android:onClick="llamarTelefono"
-        android:text="@string/btn_llamar"
-        android:textColor="#050505"
-        app:backgroundTint="@null"
-        app:icon="@drawable/tel"
-        app:iconGravity="textEnd"
-        app:iconSize="30dp"
-        app:iconTint="#040303"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="34dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLocal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/nombreLocal"
+        app:layout_constraintStart_toStartOf="@+id/nombreLocal"
+        app:layout_constraintTop_toBottomOf="@+id/nombreLocal"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TextSizeCheck" />
 
-    <Button
-        android:id="@+id/btn_ver_perfil"
-        android:layout_width="218dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
-        android:onClick="irVerPefil"
-        android:text="@string/btn_ver_perfil"
-        android:textColor="#050505"
-        android:textSize="14sp"
-        app:backgroundTint="@null"
-        app:icon="@drawable/perif"
-        app:iconSize="30dp"
-        app:iconTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_llamar"
-        app:layout_constraintVertical_bias="0.031" />
-
-    <Button
-        android:id="@+id/btn_regresar"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/nombreLocal"
+        android:layout_width="199dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/design_buttons"
-        android:onClick="iraInterfazUsuario"
-        android:text="@string/btn_regresar"
-        android:textColor="#040404"
-        android:textSize="16sp"
-        app:backgroundTint="@null"
-        app:icon="@android:drawable/ic_media_rew"
-        app:iconTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/dis_txt"
+        android:gravity="center"
+        android:textColor="#323131"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtDireccion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.902"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_ver_perfil"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintEnd_toStartOf="@+id/txtDireccion"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imgLocal"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
